some small changes done for swagger ui
